# greedy

./: Cargo.toml
src/: main.rs
