[package]
name = "greedy"
version = "0.1.0"
authors = ["Dmitry Shuranov <dvshur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
once_cell = "1.3.1"

[[bin]]
bench = false
path = "src/main.rs"
name = "greedy"